[package]
name = "somedoc"
version = "0.2.1"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "A very simple document model and markup generator."
documentation = "https://docs.rs/somedoc/"
repository = "https://github.com/johnstonskj/rust-somedoc.git"
license = "MIT"
readme = "README.md"
publish = true

[features]
default = ["fmt_html", "fmt_latex", "fmt_markdown"]
fmt_html = []
fmt_latex = []
fmt_markdown = []
math_builder = []
emoji_names = []

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
error-chain = "0.12.2"
lazy_static = "1.4.0"
regex = "1.4.2"

[dev-dependencies]
proptest = "0.10.1"
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
