[package]
name = "somedoc"
version = "0.2.9"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "A very simple document model and markup generator."
documentation = "https://docs.rs/somedoc/"
repository = "https://github.com/johnstonskj/rust-somedoc.git"
license = "MIT"
readme = "README.md"
publish = true

[features]
default = ["fmt_html", "fmt_json", "fmt_latex", "fmt_markdown"]
fmt_html = []
fmt_json = ["serde", "serde_json"]
fmt_latex = []
fmt_markdown = []
math_builder = []
emoji_names = []

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
blob-uuid = "0.4.0"
error-chain = "0.12.2"
lazy_static = "1.4.0"
regex = "1.4.2"

serde = { version = "1.0.123", features = ["derive"], optional = true }
serde_json = { version = "1.0.62", optional = true }

[dev-dependencies]
proptest = "0.10.1"
pretty_assertions = "0.6.1"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["precommit-hook", "run-cargo-fmt", "run-cargo-test" ]
